--- a/oktober1/coba.html
+++ b/oktober1/coba.html
@@ -81,7 +81,6 @@
 
 <div class="pagination" id="pagination"></div>
 
-<!-- 🧩 Fitur Backup & Import -->
 <div class="backup-area">
   <h3>🔒 Backup & Import Data</h3>
   <div class="input-buttons">
@@ -90,8 +89,6 @@
     <button onclick="importLocalStorage()">Import Data</button>
   </div>
   <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
-
-  <!-- Tombol Singkron Semua File -->
   <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Singkron Semua File TXT</button>
 </div>
 
@@ -111,17 +108,13 @@ const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
 
-/* === Helper untuk ambil/simpan per file === */
 function getStorageKey() {
   const f = dropdownEl.value || 'default';
   return 'appData_' + f;
 }
 function saveAppData() {
   const key = getStorageKey();
-  const data = {
-    inputList: inputLinksEl.value,
-    currentPage: currentPage
-  };
+  const data = { inputList: inputLinksEl.value, currentPage: currentPage };
   localStorage.setItem(key, JSON.stringify(data));
 }
 function loadAppData() {
@@ -131,7 +124,6 @@ function loadAppData() {
   currentPage = data.currentPage || 1;
 }
 
-/* Restore localStorage sesuai file aktif */
 window.addEventListener('load', () => {
   const savedDropdown = localStorage.getItem('selectedFile');
   if (savedDropdown) dropdownEl.value = savedDropdown;
@@ -140,7 +132,6 @@ window.addEventListener('load', () => {
   showPage(currentPage);
 });
 
-/* Simpan dropdown */
 dropdownEl.addEventListener('change', () => {
   localStorage.setItem('selectedFile', dropdownEl.value);
   loadAppData();
@@ -148,30 +139,11 @@ dropdownEl.addEventListener('change', () => {
   showPage(currentPage);
 });
 
-/* Simpan input otomatis */
 inputLinksEl.addEventListener('input', () => {
   processLinks();
   saveAppData();
 });
 
-/* Tombol ambil file dropdown */
-document.getElementById('ambilFileListLinksBtn').addEventListener('click', async () => {
-  const selectedFile = dropdownEl.value;
-  if (!selectedFile) { alert('Pilih file TXT dulu!'); return; }
-  try {
-    const res = await fetch(selectedFile + '?t=' + Date.now(), { cache: 'no-store' });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    const text = await res.text();
-    inputLinksEl.value = text.trim();
-    processLinks();
-    saveAppData();
-    alert('Berhasil mengambil ' + selectedFile);
-  } catch (e) {
-    alert('Gagal mengambil ' + selectedFile + ': ' + e.message);
-  }
-});
-
-/* Tombol lain */
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
   inputLinksEl.value = '';
   saveAppData();
@@ -191,7 +163,6 @@ document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
   alert('Duplikat dihapus!');
 });
 
-/* Fungsi utama */
 function processLinks() {
   const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
@@ -207,22 +178,17 @@ function processLinks() {
 
 function renderStats(total, uniq, dup) {
   statsEl.textContent =
-    `Total link diinput: ${total}\n` +
-    `Link unik: ${uniq}\n` +
-    `Duplikat dihapus: ${dup}\n` +
-    `Total halaman: ${allPages.length}`;
+    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
 
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
-  outputEl.innerHTML = allPages[page - 1]
-    .map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
+  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
   outputEl.style.display = 'block';
   highlightActivePage();
   saveAppData();
 }
-
 function renderPagination() {
   paginationEl.innerHTML = '';
   for (let i = 1; i <= allPages.length; i++) {
@@ -234,20 +200,18 @@ function renderPagination() {
     paginationEl.appendChild(btn);
   }
 }
-
 function highlightActivePage() {
   document.querySelectorAll('.page-btn').forEach((btn, index) => {
     btn.classList.toggle('active', index + 1 === currentPage);
   });
 }
-
 function copyToClipboard() {
   if (!allPages.length) return alert('Tidak ada link!');
   const text = allPages[currentPage - 1].join('\n');
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* === FITUR BACKUP / IMPORT LOCALSTORAGE === */
+/* === Backup & Import === */
 function exportLocalStorage() {
   const data = {};
   for (let i = 0; i < localStorage.length; i++) {
@@ -263,7 +227,6 @@ function exportLocalStorage() {
   URL.revokeObjectURL(url);
   alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
 }
-
 function importLocalStorage() {
   const fileInput = document.getElementById('importFile');
   const file = fileInput.files[0];
@@ -275,15 +238,14 @@ function importLocalStorage() {
       Object.keys(data).forEach(key => {
         localStorage.setItem(key, data[key]);
       });
-      alert('✅ Data berhasil diimport ke localStorage. Silakan reload halaman.');
+      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
       location.reload();
     } catch (err) {
-      alert('❌ File tidak valid atau rusak: ' + err.message);
+      alert('❌ File tidak valid: ' + err.message);
     }
   };
   reader.readAsText(file);
 }
-
 function resetLocalStorage() {
   if (confirm('Yakin ingin menghapus semua data localStorage?')) {
     localStorage.clear();
@@ -292,8 +254,8 @@ function resetLocalStorage() {
   }
 }
 
-/* === 🔄 FUNGSI SINGKRON SEMUA FILE === */
-document.getElementById('syncAllBtn').addEventListener('click', async () => {
+/* === FUNGSI SINKRON SEMUA FILE === */
+async function syncAllFiles() {
   const options = Array.from(dropdownEl.options).filter(o => o.value);
   if (!options.length) return alert('Tidak ada file di dropdown.');
 
@@ -328,7 +290,11 @@ document.getElementById('syncAllBtn').addEventListener('click', async () => {
   }
 
   alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
-});
+}
+
+/* === Hubungkan tombol === */
+document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
 </script>
 </body>
 </html>
