--- a/oktober1/gabung.html
+++ b/oktober1/gabung.html
@@ -65,7 +65,7 @@
   <option value="lima.txt">nurbad.txt</option>
 </select>
 <div class="input-buttons">
-  <button id="ambilFileListLinksBtn">Download Terbaru</button>
+  <button id="ambilFileListLinksBtn">🔄 Singkron Semua Data</button>
 </div>
 
 <div class="sponsor">
@@ -81,7 +81,6 @@
 
 <div class="pagination" id="pagination"></div>
 
-<!-- 🧩 Fitur Backup & Import -->
 <div class="backup-area">
   <h3>🔒 Backup & Import Data</h3>
   <div class="input-buttons">
@@ -90,9 +89,6 @@
     <button onclick="importLocalStorage()">Import Data</button>
   </div>
   <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
-
-  <!-- Tombol Singkron Semua File -->
-  <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Singkron Semua File TXT</button>
 </div>
 
 <footer>
@@ -111,17 +107,11 @@ const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
 
-/* === Helper untuk ambil/simpan per file === */
-function getStorageKey() {
-  const f = dropdownEl.value || 'default';
-  return 'appData_' + f;
-}
+/* === Penyimpanan & Pemulihan === */
+function getStorageKey() { return 'appData_' + (dropdownEl.value || 'default'); }
 function saveAppData() {
   const key = getStorageKey();
-  const data = {
-    inputList: inputLinksEl.value,
-    currentPage: currentPage
-  };
+  const data = { inputList: inputLinksEl.value, currentPage };
   localStorage.setItem(key, JSON.stringify(data));
 }
 function loadAppData() {
@@ -131,51 +121,21 @@ function loadAppData() {
   currentPage = data.currentPage || 1;
 }
 
-/* Restore localStorage sesuai file aktif */
+/* === Saat Halaman Dibuka === */
 window.addEventListener('load', () => {
   const savedDropdown = localStorage.getItem('selectedFile');
   if (savedDropdown) dropdownEl.value = savedDropdown;
-  loadAppData();
-  processLinks();
-  showPage(currentPage);
+  loadAppData(); processLinks(); showPage(currentPage);
 });
-
-/* Simpan dropdown */
 dropdownEl.addEventListener('change', () => {
   localStorage.setItem('selectedFile', dropdownEl.value);
-  loadAppData();
-  processLinks();
-  showPage(currentPage);
+  loadAppData(); processLinks(); showPage(currentPage);
 });
+inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(); });
 
-/* Simpan input otomatis */
-inputLinksEl.addEventListener('input', () => {
-  processLinks();
-  saveAppData();
-});
-
-/* Tombol ambil file dropdown */
-document.getElementById('ambilFileListLinksBtn').addEventListener('click', async () => {
-  const selectedFile = dropdownEl.value;
-  if (!selectedFile) { alert('Pilih file TXT dulu!'); return; }
-  try {
-    const res = await fetch(selectedFile + '?t=' + Date.now(), { cache: 'no-store' });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    const text = await res.text();
-    inputLinksEl.value = text.trim();
-    processLinks();
-    saveAppData();
-    alert('Berhasil mengambil ' + selectedFile);
-  } catch (e) {
-    alert('Gagal mengambil ' + selectedFile + ': ' + e.message);
-  }
-});
-
-/* Tombol lain */
+/* === Tombol Input === */
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
-  inputLinksEl.value = '';
-  saveAppData();
-  processLinks();
+  inputLinksEl.value = ''; saveAppData(); processLinks();
 });
 document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
   const text = inputLinksEl.value.trim();
@@ -185,44 +145,33 @@ document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
 document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
   const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(lines)];
-  inputLinksEl.value = unique.join('\n');
-  processLinks();
-  saveAppData();
+  inputLinksEl.value = unique.join('\n'); processLinks(); saveAppData();
   alert('Duplikat dihapus!');
 });
 
-/* Fungsi utama */
+/* === Proses Link === */
 function processLinks() {
   const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
   const dup = raw.length - unique.length;
   allPages = [];
-  for (let i = 0; i < unique.length; i += MAX_PER_PAGE) {
+  for (let i = 0; i < unique.length; i += MAX_PER_PAGE)
     allPages.push(unique.slice(i, i + MAX_PER_PAGE));
-  }
   if (currentPage > allPages.length) currentPage = 1;
   renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
-
 function renderStats(total, uniq, dup) {
   statsEl.textContent =
-    `Total link diinput: ${total}\n` +
-    `Link unik: ${uniq}\n` +
-    `Duplikat dihapus: ${dup}\n` +
-    `Total halaman: ${allPages.length}`;
+    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
-
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
-  outputEl.innerHTML = allPages[page - 1]
-    .map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
+  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
   outputEl.style.display = 'block';
-  highlightActivePage();
-  saveAppData();
+  highlightActivePage(); saveAppData();
 }
-
 function renderPagination() {
   paginationEl.innerHTML = '';
   for (let i = 1; i <= allPages.length; i++) {
@@ -234,20 +183,18 @@ function renderPagination() {
     paginationEl.appendChild(btn);
   }
 }
-
 function highlightActivePage() {
   document.querySelectorAll('.page-btn').forEach((btn, index) => {
     btn.classList.toggle('active', index + 1 === currentPage);
   });
 }
-
 function copyToClipboard() {
   if (!allPages.length) return alert('Tidak ada link!');
   const text = allPages[currentPage - 1].join('\n');
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* === FITUR BACKUP / IMPORT LOCALSTORAGE === */
+/* === Backup & Import === */
 function exportLocalStorage() {
   const data = {};
   for (let i = 0; i < localStorage.length; i++) {
@@ -257,13 +204,10 @@ function exportLocalStorage() {
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
-  a.href = url;
-  a.download = 'madgazan_backup.json';
-  a.click();
+  a.href = url; a.download = 'madgazan_backup.json'; a.click();
   URL.revokeObjectURL(url);
   alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
 }
-
 function importLocalStorage() {
   const fileInput = document.getElementById('importFile');
   const file = fileInput.files[0];
@@ -272,63 +216,50 @@ function importLocalStorage() {
   reader.onload = function(e) {
     try {
       const data = JSON.parse(e.target.result);
-      Object.keys(data).forEach(key => {
-        localStorage.setItem(key, data[key]);
-      });
-      alert('✅ Data berhasil diimport ke localStorage. Silakan reload halaman.');
+      Object.keys(data).forEach(k => localStorage.setItem(k, data[k]));
+      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
       location.reload();
     } catch (err) {
-      alert('❌ File tidak valid atau rusak: ' + err.message);
+      alert('❌ File tidak valid: ' + err.message);
     }
   };
   reader.readAsText(file);
 }
-
 function resetLocalStorage() {
   if (confirm('Yakin ingin menghapus semua data localStorage?')) {
-    localStorage.clear();
-    alert('Semua data localStorage telah dihapus.');
-    location.reload();
+    localStorage.clear(); location.reload();
   }
 }
 
-/* === 🔄 FUNGSI SINGKRON SEMUA FILE === */
-document.getElementById('syncAllBtn').addEventListener('click', async () => {
+/* === Sinkron Semua File === */
+async function syncAllFiles() {
   const options = Array.from(dropdownEl.options).filter(o => o.value);
   if (!options.length) return alert('Tidak ada file di dropdown.');
-
   if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
 
   let success = 0, fail = 0, lastText = '', lastFile = '';
-
   for (const opt of options) {
     try {
-      const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
+      const res = await fetch(opt.value + '?t=' + Date.now());
       if (!res.ok) throw new Error('HTTP ' + res.status);
       const text = await res.text();
-      const key = 'appData_' + opt.value;
-      const data = { inputList: text.trim(), currentPage: 1 };
-      localStorage.setItem(key, JSON.stringify(data));
-      success++;
-      lastText = text.trim();
-      lastFile = opt.value;
-      console.log(`✅ ${opt.value} berhasil disinkronkan.`);
-    } catch (e) {
-      console.warn(`❌ Gagal ambil ${opt.value}:`, e);
-      fail++;
-    }
+      localStorage.setItem('appData_' + opt.value, JSON.stringify({ inputList: text.trim(), currentPage: 1 }));
+      success++; lastText = text.trim(); lastFile = opt.value;
+    } catch { fail++; }
   }
 
   if (lastText) {
     inputLinksEl.value = lastText;
     dropdownEl.value = lastFile;
     localStorage.setItem('selectedFile', lastFile);
-    processLinks();
-    showPage(1);
+    processLinks(); showPage(1);
   }
 
   alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
-});
+}
+
+/* === Tombol === */
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
 </script>
 </body>
 </html>
