--- a/read/h.html
+++ b/read/h.html
@@ -20,6 +20,7 @@
   .toolbar {
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
     gap: 8px;
     margin-bottom: 6px;
   }
@@ -63,6 +64,20 @@
     width: 100%;
     border: none;
     display: block;
+    transition: height 0.2s;
+  }
+  /* Mode lihat hasil saja */
+  .hide-editor #editor-area {
+    display: none;
+  }
+  .hide-editor iframe {
+    height: 100vh !important;
+  }
+  .toggle-btn {
+    background-color: #d6d6d6;
+  }
+  .toggle-btn:hover {
+    background-color: #c2c2c2;
   }
 </style>
 </head>
@@ -71,19 +86,22 @@
 <h1>🧩 Penampil Kode HTML Langsung</h1>
 <p>Tempelkan kode HTML di bawah ini — hasilnya langsung muncul otomatis di bawah.</p>
 
-<!-- 🔧 Toolbar tombol -->
-<div class="toolbar">
-  <button id="copyBtn">📋 Salin</button>
-  <button id="pasteBtn">📥 Tempel</button>
-  <button id="clearBtn">🗑️ Hapus</button>
+<div id="editor-area">
+  <!-- 🔧 Toolbar tombol -->
+  <div class="toolbar">
+    <button id="copyBtn">📋 Salin</button>
+    <button id="pasteBtn">📥 Tempel</button>
+    <button id="clearBtn">🗑️ Hapus</button>
+    <button id="toggleViewBtn" class="toggle-btn">👁️ Lihat Hasil Saja</button>
+  </div>
+
+  <textarea id="htmlInput" placeholder="Tempelkan kode HTML di sini..."></textarea>
+  <div class="status" id="status">💾 Menunggu input...</div>
+
+  <hr>
 </div>
 
-<textarea id="htmlInput" placeholder="Tempelkan kode HTML di sini..."></textarea>
-<div class="status" id="status">💾 Menunggu input...</div>
-
-<hr>
-
-<!-- 🔽 Hasil tampil di bawah (tanpa kotak kecil) -->
+<!-- 🔽 Hasil tampil di bawah -->
 <iframe id="htmlOutput"></iframe>
 
 <script>
@@ -93,9 +111,10 @@ const statusEl = document.getElementById('status');
 const copyBtn = document.getElementById('copyBtn');
 const pasteBtn = document.getElementById('pasteBtn');
 const clearBtn = document.getElementById('clearBtn');
+const toggleViewBtn = document.getElementById('toggleViewBtn');
 const STORAGE_KEY = 'auto_html_sandbox_' + location.pathname.replace(/\W+/g, '_');
 
-// 🔹 Fungsi menulis HTML ke iframe + auto sesuaikan tinggi
+// 🔹 Menulis HTML ke iframe + sesuaikan tinggi
 function jalankanHTML() {
   const kode = inputEl.value;
   const doc = iframe.contentDocument || iframe.contentWindow.document;
@@ -105,9 +124,9 @@ function jalankanHTML() {
 
   // Tunggu render, lalu atur tinggi sesuai konten
   setTimeout(() => {
-    const tinggi = doc.body.scrollHeight;
+    const tinggi = Math.max(doc.body.scrollHeight, 600);
     iframe.style.height = tinggi + 50 + 'px';
-  }, 100);
+  }, 150);
 }
 
 // 🔹 Auto simpan ke localStorage
@@ -166,6 +185,12 @@ clearBtn.addEventListener('click', () => {
     jalankanHTML();
     statusEl.textContent = '🗑️ Kode dihapus dan penyimpanan lokal dibersihkan';
   }
+});
+
+// 🔹 Tombol: Lihat hasil saja
+toggleViewBtn.addEventListener('click', () => {
+  const isHide = document.body.classList.toggle('hide-editor');
+  toggleViewBtn.textContent = isHide ? '✏️ Edit Kode Lagi' : '👁️ Lihat Hasil Saja';
 });
 </script>
 
